# claudewrap

./: Cargo.toml  README.md  flake.nix
.claude/: wrap.toml
src/: agent_proxy.rs  cli.rs  config.rs  main.rs  resolve.rs  sandbox.rs  seccomp.rs  sockets.rs  ssh_protocol.rs  ssh_proxy.rs
