[package]
name = "claudewrap"
version = "0.1.0"
edition = "2021"
description = "Sandbox Claude Code with bubblewrap"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
